tests/type-errors/non_comparable_set.arl
archetype non_comparable_set

entry exec () {
  effect {
    var s : set<(int * int)>  = [];
  }
}
